[gd_scene load_steps=2 format=2]

[ext_resource path="res://connectors/owncastconnector_ui.gd" type="Script" id=1]

[node name="OwncastConnectorUI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="RichTextLabel" type="RichTextLabel" parent="VBoxContainer"]
margin_right = 1280.0
margin_bottom = 620.0
focus_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
bbcode_enabled = true
bbcode_text = "To connect to your Owncast instance, we need your admin user name and password. You also need to provide the URL to your Owncast instance (e.g. https://your.owncast.com)."
text = "To connect to your Owncast instance, we need your admin user name and password. You also need to provide the URL to your Owncast instance (e.g. https://your.owncast.com)."
selection_enabled = true

[node name="MarginContainerURL" type="MarginContainer" parent="VBoxContainer"]
margin_top = 624.0
margin_right = 1280.0
margin_bottom = 650.0

[node name="URL" type="LineEdit" parent="VBoxContainer/MarginContainerURL"]
margin_right = 1280.0
margin_bottom = 26.0
clear_button_enabled = true
placeholder_text = "URL"

[node name="MarginContainerUsername" type="MarginContainer" parent="VBoxContainer"]
margin_top = 654.0
margin_right = 1280.0
margin_bottom = 680.0

[node name="Username" type="LineEdit" parent="VBoxContainer/MarginContainerUsername"]
margin_right = 1280.0
margin_bottom = 26.0
clear_button_enabled = true
placeholder_text = "Username"

[node name="MarginContainerPassword" type="MarginContainer" parent="VBoxContainer"]
margin_top = 684.0
margin_right = 1280.0
margin_bottom = 720.0
custom_constants/margin_top = 10

[node name="Password" type="LineEdit" parent="VBoxContainer/MarginContainerPassword"]
margin_top = 10.0
margin_right = 1280.0
margin_bottom = 36.0
secret = true
clear_button_enabled = true
placeholder_text = "Password"

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[connection signal="meta_clicked" from="VBoxContainer/RichTextLabel" to="." method="_on_RichTextLabel_meta_clicked"]
